Add delete and update feature on posts

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,6 +61,11 @@
             color: #ff9900;
             /* Text color */
         }
+
+        .no-resize {
+            resize: none;
+            /* Disables the resize functionality */
+        }
     </style>
 </head>
 
