--- a/views/post.ejs
+++ b/views/post.ejs
@@ -22,7 +22,7 @@
             </p> <!-- Post content -->
 
             <div class="d-flex flex-row-reverse">
-                <a href="#" style="text-decoration: none; color: white;">
+                <a href="/update/<%= post.id %>" style="text-decoration: none; color: white;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                         class="bi bi-pencil" viewBox="0 0 16 16">
                         <path
