Commit finished product (hopefully)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,7 +47,7 @@
         }
 
         .orange-link:hover {
-            color: #ff9900;
+            color: #ffb03a;
         }
 
         /* Class for border-top with specific color */
@@ -65,6 +65,24 @@
         .no-resize {
             resize: none;
             /* Disables the resize functionality */
+        }
+
+        /* Transparent button */
+        .btn-transparent {
+            background-color: transparent;
+            /* No background color */
+            border: none;
+            /* No border */
+            color: #ff9900;
+            /* Use text color from parent context */
+            cursor: pointer;
+            /* Change cursor to pointer on hover */
+        }
+
+        /* Optional hover effect */
+        .btn-transparent:hover {
+            color: #ffb03a;
+            /* Maintain text color on hover */
         }
     </style>
 </head>
